# quant-toolcall-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: llama32-3b-q4-smoke.yaml  qwen3-0.6b-smoke.yaml  smoke.yaml  sweep-Q4_K_M-s0.yaml  sweep-Q4_K_M-s1.yaml  sweep-Q4_K_M-s2.yaml  sweep-Q4_K_M-s42.yaml  sweep-Q4_K_M-s43.yaml  sweep-Q4_K_M-s44.yaml  sweep-Q5_K_M-s0.yaml  sweep-Q5_K_M-s1.yaml  sweep-Q5_K_M-s2.yaml  sweep-Q8_0-s0.yaml  sweep-Q8_0-s1.yaml  sweep-Q8_0-s2.yaml  sweep-Q8_0-s42.yaml  sweep-Q8_0-s43.yaml  sweep-Q8_0-s44.yaml
configs/broader-tiers/: llama-1b-Q4_K_M-t2t3-s0.yaml  llama-1b-Q4_K_M-t2t3-s1.yaml  llama-1b-Q4_K_M-t2t3-s2.yaml  llama-1b-fp16-t2t3-s0.yaml  llama-1b-fp16-t2t3-s1.yaml  llama-1b-fp16-t2t3-s2.yaml  qwen3-0.6b-Q4_K_M-t2t3-s0.yaml  qwen3-0.6b-Q4_K_M-t2t3-s1.yaml  qwen3-0.6b-Q4_K_M-t2t3-s2.yaml  qwen3-0.6b-fp16-t2t3-s0.yaml  qwen3-0.6b-fp16-t2t3-s1.yaml  qwen3-0.6b-fp16-t2t3-s2.yaml
configs/hf-sanity/: lmstudio-gemma-sanity.yaml  (+2 more)
docs/: BUILD_PLAN.md  PUBLISH_HF.md  RESULTS_SCHEMA.md  RUN_REAL.md  broader_tiers_findings.md  constrained_decoding_findings.md  parser_audit.md
scripts/: aggregate_sweep.py  cdr_analysis.py  delta_significance.py
tests/: conftest.py  test_abstention_e2e.py  test_ast_matcher.py  test_bfcl_adapter.py  test_bootstrap_ci.py  test_cdr.py  test_cli_build_backend.py  test_config.py  test_dataset_adapters.py  test_datasets_smoke.py  test_deltas.py  test_gbnf.py  test_hf_backend.py  test_metrics_core.py  test_mock_backend.py  test_openai_endpoint_backend.py  test_pareto.py  test_parsers.py  test_parsers_p3.py  test_parsing_raw_json.py  test_qwen3_parsing.py  test_report.py  test_schema_validator.py  test_smoke_e2e.py  test_suite.py  test_vllm_backend.py
(+92 files in other folders)
