[project]
name = "quantcall"
version = "0.1.0"
description = "Reproducible benchmark measuring quantization degradation of LLM function-calling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
quantcall = "quantcall.cli:main"

[project.optional-dependencies]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
]
llama-cpp = [
    "llama-cpp-python>=0.2",
]
vllm = [
    "vllm>=0.4",
]
datasets = [
    "datasets>=2.0",
]
decoding = [
    "outlines>=0.0.46",
    "xgrammar>=0.1",
]
space = [
    "gradio>=4.0",
    "plotly>=5.0",
]
all-backends = [
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "llama-cpp-python>=0.2",
    "vllm>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantcall"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
ignore = [
    "src/quantcall/backends/hf.py",
    "src/quantcall/backends/llama_cpp.py",
    "src/quantcall/backends/vllm_backend.py",
    "src/quantcall/decoding/outlines_hf.py",
    "src/quantcall/decoding/guided_json.py",
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: requires optional deps or network access",
    "slow: long-running tests",
]
